--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [匈牙利议会批准为引发争议的中国大学校园捐赠土地](/articles/voa/1040093.md)
+
 6-17 [分析：首尔面对美中陷入两难 中国逼迫韩国并不明智](/articles/voa/1040094.md)
 
 6-17 [澳门步香港后尘 停止驻台经济办事处运作](/articles/voa/1040095.md)
@@ -598,6 +600,4 @@
 6-3 [达赖喇嘛路与自由香港路:布达佩斯市长重新命名拟建复旦大学分校周边街道](/articles/voa/1040391.md)
 
 6-3 [报道：五角大楼审计报告认为可以使用两款中国大疆无人机](/articles/voa/1040392.md)
-
-6-3 [消费疲软，原料暴涨，中国经济险象丛生](/articles/voa/1040393.md)
 
