--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-17 [时事大家谈: 拜登剑指中国，宁会普京不见习近平？](/articles/voa/1040090.md)
+
+6-17 [国会议员要求政府依法打击中国在美国大学的影响力](/articles/voa/1040091.md)
+
+6-17 [欧盟建议成员国取消对美旅游限制](/articles/voa/1040092.md)
+
 6-17 [匈牙利议会批准为引发争议的中国大学校园捐赠土地](/articles/voa/1040093.md)
 
 6-17 [分析：首尔面对美中陷入两难 中国逼迫韩国并不明智](/articles/voa/1040094.md)
@@ -594,10 +600,4 @@
 6-3 [以色列政界人士组成脆弱联盟以取代内塔尼亚胡政府](/articles/voa/1040388.md)
 
 6-3 [完成撤军期限将至 美国培训阿富汗政府军的使命能否维持前景不明](/articles/voa/1040389.md)
-
-6-3 [白宫：拜登将与普京讨论对JBS肉食加工厂的网络攻击行为](/articles/voa/1040390.md)
-
-6-3 [达赖喇嘛路与自由香港路:布达佩斯市长重新命名拟建复旦大学分校周边街道](/articles/voa/1040391.md)
-
-6-3 [报道：五角大楼审计报告认为可以使用两款中国大疆无人机](/articles/voa/1040392.md)
 
