--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [更多的新西兰民众认为中国是威胁](/articles/voa/1040089.md)
+
 6-17 [时事大家谈: 拜登剑指中国，宁会普京不见习近平？](/articles/voa/1040090.md)
 
 6-17 [国会议员要求政府依法打击中国在美国大学的影响力](/articles/voa/1040091.md)
@@ -598,6 +600,4 @@
 6-3 [特朗普关闭博客 其网络平台几乎全部消失](/articles/voa/1040387.md)
 
 6-3 [以色列政界人士组成脆弱联盟以取代内塔尼亚胡政府](/articles/voa/1040388.md)
-
-6-3 [完成撤军期限将至 美国培训阿富汗政府军的使命能否维持前景不明](/articles/voa/1040389.md)
 
