--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [与普京会晤后 拜登语气现实](/articles/voa/1040082.md)
+
 6-17 [紧张局势升级 中国对欧投资创10年新低](/articles/voa/1040083.md)
 
 6-17 [美国关注中国在联合国的影响力](/articles/voa/1040084.md)
@@ -598,6 +600,4 @@
 6-3 [5月中国服务业扩张放缓](/articles/voa/1040380.md)
 
 6-3 [美国重申不会以疫苗换取政治利益](/articles/voa/1040381.md)
-
-6-3 [美国防政策主管：应对中国挑战是国防部的首要任务](/articles/voa/1040382.md)
 
