--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [揭秘东条英机遗骸下落：骨灰被撒入太平洋](/articles/nyt/1046720.md)
+
 6-17 [简报：中国发射神舟十二号载人飞船；《苹果日报》总编辑罗伟光被捕](/articles/nyt/1046721.md)
 
 6-17 [《苹果日报》总编辑罗伟光等五人被捕](/articles/nyt/1046722.md)
@@ -598,6 +600,4 @@
 3-31 [塞尔维亚称赞中国公司为救星，但当地人付出了代价](/articles/nyt/1047018.md)
 
 3-31 [“你不属于这里”：纽约再次发生亚裔被袭击事件](/articles/nyt/1047019.md)
-
-3-31 [面对袭击和仇恨，第二代亚裔移民如何保护年迈的父母](/articles/nyt/1047020.md)
 
