--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-17 [金正恩的健康隐患和他采取的防范措施](/articles/ft/1045464.md)
+
+6-17 [黑石同意以30亿美元收购SOHO中国](/articles/ft/1045465.md)
+
 6-17 [极星酝酿上市,为全球扩张筹资](/articles/ft/1045466.md)
 
 6-17 [苏宁易购股票停牌](/articles/ft/1045467.md)
@@ -596,8 +600,4 @@
 4-13 [制裁中国超算实体：中美“军民两用技术”的脱钩或将不可避免](/articles/ft/1045762.md)
 
 4-13 [美国疾控中心敦促密歇根州封锁以抑制新冠疫情](/articles/ft/1045763.md)
-
-4-13 [美国撇清与伊朗核设施遇袭事件的关系](/articles/ft/1045764.md)
-
-4-13 [由阿里受罚看平台经济下一步](/articles/ft/1045765.md)
 
