--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [中国发射神舟十二号载人飞船，三名宇航员探索太空](/articles/nyt/1046719.md)
+
 6-17 [揭秘东条英机遗骸下落：骨灰被撒入太平洋](/articles/nyt/1046720.md)
 
 6-17 [简报：中国发射神舟十二号载人飞船；《苹果日报》总编辑罗伟光被捕](/articles/nyt/1046721.md)
@@ -598,6 +600,4 @@
 4-1 [美国有一个统治阶级](/articles/nyt/1047017.md)
 
 3-31 [塞尔维亚称赞中国公司为救星，但当地人付出了代价](/articles/nyt/1047018.md)
-
-3-31 [“你不属于这里”：纽约再次发生亚裔被袭击事件](/articles/nyt/1047019.md)
 
