--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [香港警方拘捕5名<苹果日报>高管](/articles/voa/1040079.md)
+
+6-17 [指有效率太低 哥斯达黎加决定暂不接收中国科兴疫苗](/articles/voa/1040080.md)
+
 6-17 [首次与中国防长在同一场合出现 美防长直言中国在南中国海违法](/articles/voa/1040081.md)
 
 6-17 [与普京会晤后 拜登语气现实](/articles/voa/1040082.md)
@@ -596,8 +600,4 @@
 6-3 [中国乳制品需求高涨，奶牛不足难解市场之渴](/articles/voa/1040377.md)
 
 6-3 [亲历者回忆六四：民主和自由与青春和觉醒同步（上）](/articles/voa/1040378.md)
-
-6-3 [政治评论人士仇子明被判入狱8个月](/articles/voa/1040379.md)
-
-6-3 [5月中国服务业扩张放缓](/articles/voa/1040380.md)
 
