--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-17 [苹果日报｜致读者的信：我们必紧守岗位为迎接黎明奋战](/articles/cdt/381347.md)
+
 6-17 [【异闻观止】网信中国 | 中央网信办启动“清朗·‘饭圈’乱象整治”专项行动](/articles/cdt/381353.md)
 
 6-17 [【网络民议】建党百年最好的礼物就是把党支部送上天](/articles/cdt/381356.md)
@@ -598,6 +600,4 @@
 5-12 [兽楼处｜不该熄灭的圣灯](/articles/cdt/382680.md)
 
 5-12 [【图说天朝】新时代的道路以目：“隔空投送”爆料](/articles/cdt/382686.md)
-
-5-11 [疾痛的隐喻 | 来看看过去一年坏了多少监控](/articles/cdt/382693.md)
 
