--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,36 @@
 自由亚洲电台
 ------
 
+6-17 [法医数据库存储维吾尔人档案引争议](/articles/rfa/1045303.md)
+
+6-17 [拜登普京宣布开启战略对话    对中国意味着什么?](/articles/rfa/1045304.md)
+
+6-17 [复旦为遇刺书记募款遭翻车  网友问“在哪儿给姜老师捐款？”](/articles/rfa/1045305.md)
+
+6-17 [美国驻UN大使：美国须留在谈判桌上抗衡中国](/articles/rfa/1045306.md)
+
+6-17 [中国加大校外教培行业监管  促进“三孩”政策落实？](/articles/rfa/1045307.md)
+
+6-17 [加拿大欧盟合作关键矿产供应   降低对中国的依赖](/articles/rfa/1045308.md)
+
+6-17 [捷克议会谴责中国对维吾尔人犯下严重种族绝灭罪     比利时议会强调风险](/articles/rfa/1045309.md)
+
+6-16 [中国计划经济贻害无穷   生猪价格急跌养猪户破产](/articles/rfa/1045310.md)
+
+6-16 [布拉格市长吁援台疫苗 首位欧洲政治人物关注台湾疫苗](/articles/rfa/1045311.md)
+
+6-16 [逃避国安教育   香港中产阶层携子女移民](/articles/rfa/1045312.md)
+
+6-16 [美欧解决贸易争端   携手对抗中国“非市场惯例”](/articles/rfa/1045313.md)
+
+6-16 [大陆军机破纪录28架次扰台 北京强势回应G7 将引更多国际关切](/articles/rfa/1045314.md)
+
+6-16 [网禁再升级  重点打击娱乐界明星粉丝群组](/articles/rfa/1045315.md)
+
+6-16 [继香港之后 澳门在台办事处19日起暂停运作](/articles/rfa/1045316.md)
+
+6-16 [大四学生退学后三次高考  只为追梦 拒绝躺平](/articles/rfa/1045317.md)
+
 6-15 [复旦血案：党管大学的作风不改 姜文华们会辈出](/articles/rfa/1045318.md)
 
 6-15 [中国出台新法严控数据监管](/articles/rfa/1045319.md)
@@ -570,34 +600,4 @@
 5-14 [中国官媒高调报道台湾亲共骑行者  被指 “大内宣”](/articles/rfa/1045601.md)
 
 5-14 [英国吁筹组国际网络安全联盟  对抗中、俄等国恶意网攻](/articles/rfa/1045602.md)
-
-5-13 [“漫威”两大片传遭中国封杀  赵婷新作恐无缘大陆市场](/articles/rfa/1045603.md)
-
-5-13 [AIM-120飞弹成功在台试射 专家：拜登政府对台信任有加](/articles/rfa/1045604.md)
-
-5-13 [全台大停电 中共要攻台？ 蔡英文提醒勿传假讯息](/articles/rfa/1045605.md)
-
-5-13 [台湾本土疫情猛爆 是否透过中国采购疫苗陷两难](/articles/rfa/1045606.md)
-
-5-13 [外媒指胡春华或取代刘鹤与美谈判    习近平与刘鹤关系引关注](/articles/rfa/1045607.md)
-
-5-13 [为刺激生育 中国或将整顿辅导班市场](/articles/rfa/1045608.md)
-
-5-13 [房地产税再次提上议事日程  利大还是弊大？](/articles/rfa/1045609.md)
-
-5-13 [美国制裁成都防邪办前主任余辉  再批种族灭绝](/articles/rfa/1045610.md)
-
-5-13 [新疆生育率大降近五成  人类近代史之最](/articles/rfa/1045611.md)
-
-5-13 [易富贤：这次人口普查质量最差](/articles/rfa/1045612.md)
-
-5-13 [汶川大地震十三周年专访艾未未：如果不实践，我们就成了道德腐败的一部分](/articles/rfa/1045613.md)
-
-5-13 [加国华裔科学家将病毒送交中国疑点多  国会要求公布内情](/articles/rfa/1045614.md)
-
-5-13 [推特假帐号粉军制造中国战狼外交官支持度](/articles/rfa/1045615.md)
-
-5-13 [国台办称对“台独顽固分子”终身追责 台湾：令人啼笑皆非](/articles/rfa/1045616.md)
-
-5-12 [汶川地震十三周年 罹难者家属坚决追责](/articles/rfa/1045617.md)
 
