--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-17 [党庆前再向壹传媒开刀     学者指要港人彻底噤声](/articles/rfa/1045302.md)
+
 6-17 [法医数据库存储维吾尔人档案引争议](/articles/rfa/1045303.md)
 
 6-17 [拜登普京宣布开启战略对话    对中国意味着什么?](/articles/rfa/1045304.md)
@@ -598,6 +600,4 @@
 5-14 [成都中学生坠亡案盖棺论定      集体回避一关键问题](/articles/rfa/1045600.md)
 
 5-14 [中国官媒高调报道台湾亲共骑行者  被指 “大内宣”](/articles/rfa/1045601.md)
-
-5-14 [英国吁筹组国际网络安全联盟  对抗中、俄等国恶意网攻](/articles/rfa/1045602.md)
 
