--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [美国防部印太事务主管人选：首要工作是更有效与中国竞争](/articles/voa/1040078.md)
+
 6-17 [香港警方拘捕5名<苹果日报>高管](/articles/voa/1040079.md)
 
 6-17 [指有效率太低 哥斯达黎加决定暂不接收中国科兴疫苗](/articles/voa/1040080.md)
@@ -598,6 +600,4 @@
 6-3 [香港保安局警告汇丰花旗 动摇投资人对银行体系信心](/articles/voa/1040376.md)
 
 6-3 [中国乳制品需求高涨，奶牛不足难解市场之渴](/articles/voa/1040377.md)
-
-6-3 [亲历者回忆六四：民主和自由与青春和觉醒同步（上）](/articles/voa/1040378.md)
 
