--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-17 [每日人物｜王思聪到底摔过多少个跟头？](/articles/cdt/381335.md)
+
+6-17 [文心雕娄｜历史如果不求证，还是历史吗？](/articles/cdt/381337.md)
+
+6-17 [历史在加速｜罗新：质疑与反抗是历史学家的使命](/articles/cdt/381339.md)
+
+6-17 [夏家少爷｜“敌对势力”一词的语义转换](/articles/cdt/381342.md)
+
 6-17 [在人间｜优胜教育倒下，我还有30万的课没有上](/articles/cdt/381344.md)
 
 6-17 [苹果日报｜致读者的信：我们必紧守岗位为迎接黎明奋战](/articles/cdt/381347.md)
@@ -592,12 +600,4 @@
 5-12 [【旧闻重温】新时代观察｜川震十年，“我们的娃娃”还在等一个答案](/articles/cdt/382660.md)
 
 5-12 [骚客文艺 | 商人野夫](/articles/cdt/382673.md)
-
-5-12 [【网络民议】成都四十九中学生坠亡事件持续发酵  家长与群众聚集校外要真相遭警方维稳（含现场视频）](/articles/cdt/382675.md)
-
-5-12 [财主的阵地 | 真搞不懂统计局的人口普查数据！](/articles/cdt/382676.md)
-
-5-12 [果壳 | 监控视频真的那么容易丢失吗？](/articles/cdt/382678.md)
-
-5-12 [兽楼处｜不该熄灭的圣灯](/articles/cdt/382680.md)
 
