--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [地缘政治竞争延伸至太空：中俄联手对抗美国](/articles/nyt/1046717.md)
+
 6-17 [台湾疫苗僵局谁之过：当公共卫生采购变成政治问题](/articles/nyt/1046718.md)
 
 6-17 [中国发射神舟十二号载人飞船，三名宇航员探索太空](/articles/nyt/1046719.md)
@@ -598,6 +600,4 @@
 4-1 [黎智英、李柱铭等七人被判非法集结罪](/articles/nyt/1047015.md)
 
 4-1 [简报：H&M回应新疆棉事件；白宫指责中国阻碍新冠调查](/articles/nyt/1047016.md)
-
-4-1 [美国有一个统治阶级](/articles/nyt/1047017.md)
 
