--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-17 [美联准会预测升息日程提前 欧股开低 – 法国国际广播电台 - RFI](/articles/rfi/1027869.md)
+
 6-17 [拜登：中国快速崛起 普京现在最不希望的就是与美国冷战](/articles/rfi/1027870.md)
 
 6-17 [义大利痛宰瑞士 欧国杯率先晋级16强 – 法国国际广播电台 - RFI](/articles/rfi/1027871.md)
@@ -598,6 +600,4 @@
 6-12 [中国赠1万AK-47步枪适合左撇子 厄瓜多尔决定继续用](/articles/rfi/1028167.md)
 
 6-12 [台湾犀牛妹远嫁日本  当地动物园盼促成好姻缘 – 法国国际广播电台 - RFI](/articles/rfi/1028168.md)
-
-6-12 [流媒体网飞（Netflix）为何一再缺席戛纳电影节 - 今日经济](/articles/rfi/1028169.md)
 
