--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [请以我的名字呼唤我](/articles/nyt/1046716.md)
+
 6-17 [地缘政治竞争延伸至太空：中俄联手对抗美国](/articles/nyt/1046717.md)
 
 6-17 [台湾疫苗僵局谁之过：当公共卫生采购变成政治问题](/articles/nyt/1046718.md)
@@ -598,6 +600,4 @@
 4-1 [曼哈顿袭击亚裔事件嫌犯被捕，曾于20年前弑母](/articles/nyt/1047014.md)
 
 4-1 [黎智英、李柱铭等七人被判非法集结罪](/articles/nyt/1047015.md)
-
-4-1 [简报：H&M回应新疆棉事件；白宫指责中国阻碍新冠调查](/articles/nyt/1047016.md)
 
