--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [美国资深媒体人刘子祥谈中共与全球化、中国文化与烹调](/articles/voa/1040076.md)
+
 6-17 [国会两党议员拟提支持台湾法案](/articles/voa/1040077.md)
 
 6-17 [美国防部印太事务主管人选：首要工作是更有效与中国竞争](/articles/voa/1040078.md)
@@ -598,6 +600,4 @@
 6-3 [台湾指责中国以疫苗谋取政治利益](/articles/voa/1040374.md)
 
 6-3 [中共党史掩盖和扭曲重大历史事件(1)：八九六四那一夜，“人民军队” 残杀了人民](/articles/voa/1040375.md)
-
-6-3 [香港保安局警告汇丰花旗 动摇投资人对银行体系信心](/articles/voa/1040376.md)
 
