--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-17 [现代聊斋余少镭｜猪坚强先生讣告](/articles/cdt/381334.md)
+
 6-17 [每日人物｜王思聪到底摔过多少个跟头？](/articles/cdt/381335.md)
 
 6-17 [文心雕娄｜历史如果不求证，还是历史吗？](/articles/cdt/381337.md)
@@ -598,6 +600,4 @@
 5-12 [【麻辣总局】爱国不分早晚、不论出身](/articles/cdt/382659.md)
 
 5-12 [【旧闻重温】新时代观察｜川震十年，“我们的娃娃”还在等一个答案](/articles/cdt/382660.md)
-
-5-12 [骚客文艺 | 商人野夫](/articles/cdt/382673.md)
 
