--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [美台签署多管火箭和鱼叉导弹两项军购合约 提升台湾不对称战力](/articles/voa/1040075.md)
+
 6-17 [美国资深媒体人刘子祥谈中共与全球化、中国文化与烹调](/articles/voa/1040076.md)
 
 6-17 [国会两党议员拟提支持台湾法案](/articles/voa/1040077.md)
@@ -598,6 +600,4 @@
 6-3 [香港当局将部署7000名警察 严防六四烛光点亮香港](/articles/voa/1040373.md)
 
 6-3 [台湾指责中国以疫苗谋取政治利益](/articles/voa/1040374.md)
-
-6-3 [中共党史掩盖和扭曲重大历史事件(1)：八九六四那一夜，“人民军队” 残杀了人民](/articles/voa/1040375.md)
 
