--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [印尼中爪哇350多医疗人员接种科兴疫苗后仍感染病毒](/articles/voa/1040073.md)
+
+6-17 [港警大动作搜查苹果日报总部激起各方抨击](/articles/voa/1040074.md)
+
 6-17 [美台签署多管火箭和鱼叉导弹两项军购合约 提升台湾不对称战力](/articles/voa/1040075.md)
 
 6-17 [美国资深媒体人刘子祥谈中共与全球化、中国文化与烹调](/articles/voa/1040076.md)
@@ -596,8 +600,4 @@
 6-3 [人权观察呼吁中国政府承认并承担六四天安门大屠杀责任](/articles/voa/1040371.md)
 
 6-3 [长荣航空天天飞 台湾民众搭机赴美打疫苗](/articles/voa/1040372.md)
-
-6-3 [香港当局将部署7000名警察 严防六四烛光点亮香港](/articles/voa/1040373.md)
-
-6-3 [台湾指责中国以疫苗谋取政治利益](/articles/voa/1040374.md)
 
