--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+6-17 [欧盟放松入境管制 美国台湾香港在列](/articles/dw/1041885.md)
+
+6-17 [训人又道歉：拜登也对记者发脾气？](/articles/dw/1041886.md)
+
+6-17 [1098克拉！非洲国家博茨瓦纳发现“鸡蛋钻”](/articles/dw/1041887.md)
+
+6-17 [德语媒体：北约不应过度聚焦中国](/articles/dw/1041888.md)
+
 6-17 [东盟防长扩大会聚焦南海 美日指中国违法](/articles/dw/1041889.md)
 
 6-17 [美国国会强势支持台湾 是否会动摇“战略模糊”?](/articles/dw/1041890.md)
@@ -592,12 +600,4 @@
 5-31 [“外国友人”何伟未能获得川大续聘](/articles/dw/1042183.md)
 
 5-31 [向中国驻柏林使馆扔燃烧瓶的中国公民被提起公诉](/articles/dw/1042184.md)
-
-5-31 [中国回应美国对大连渔业“强迫劳动”的指控:“纯属捏造”](/articles/dw/1042185.md)
-
-5-31 [再远，再难，再偏僻，也要接种！](/articles/dw/1042186.md)
-
-5-31 [贝宁：探访神秘巫毒教的摇篮](/articles/dw/1042187.md)
-
-5-31 [丹麦情报机构曾助力美国监视德国政要](/articles/dw/1042188.md)
 
