--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [日防卫大臣对中国扩军表关切 呼吁欧洲与日本合作应对](/articles/voa/1040072.md)
+
 6-17 [印尼中爪哇350多医疗人员接种科兴疫苗后仍感染病毒](/articles/voa/1040073.md)
 
 6-17 [港警大动作搜查苹果日报总部激起各方抨击](/articles/voa/1040074.md)
@@ -598,6 +600,4 @@
 6-4 [比利时大使夫人掌掴韩国店员酿成外交风波 韩网友: 又是中国人](/articles/voa/1040370.md)
 
 6-3 [人权观察呼吁中国政府承认并承担六四天安门大屠杀责任](/articles/voa/1040371.md)
-
-6-3 [长荣航空天天飞 台湾民众搭机赴美打疫苗](/articles/voa/1040372.md)
 
