--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-18 [奥运临近，东京都等九地解除疫情紧急状态](/articles/voa/1040070.md)
+
 6-17 [港府拟继续清算泛民议员 下月或有近两百人被取消资格](/articles/voa/1040071.md)
 
 6-17 [日防卫大臣对中国扩军表关切 呼吁欧洲与日本合作应对](/articles/voa/1040072.md)
@@ -598,6 +600,4 @@
 6-4 [中国加快新冠疫苗接种 疫苗分配不均等问题逐渐显露](/articles/voa/1040368.md)
 
 6-4 [拜登：反腐是延续民主制度的关键所在](/articles/voa/1040369.md)
-
-6-4 [比利时大使夫人掌掴韩国店员酿成外交风波 韩网友: 又是中国人](/articles/voa/1040370.md)
 
