--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [中国制裁在联邦议会提出“警告新疆种族灭绝”议案的比利时议员](/articles/voa/1040068.md)
+
+6-18 [不想依赖北京 普京更愿意在大国间周旋，日内瓦峰会让俄满意](/articles/voa/1040069.md)
+
 6-18 [奥运临近，东京都等九地解除疫情紧急状态](/articles/voa/1040070.md)
 
 6-17 [港府拟继续清算泛民议员 下月或有近两百人被取消资格](/articles/voa/1040071.md)
@@ -596,8 +600,4 @@
 6-4 [亲历者回忆六四: 民主和自由与青春和觉醒同步(下)](/articles/voa/1040366.md)
 
 6-4 [澳大利亚经济和出口双暴增，中国制裁事与愿违](/articles/voa/1040367.md)
-
-6-4 [中国加快新冠疫苗接种 疫苗分配不均等问题逐渐显露](/articles/voa/1040368.md)
-
-6-4 [拜登：反腐是延续民主制度的关键所在](/articles/voa/1040369.md)
 
