--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-18 [中国经济威胁  英法表态支持澳大利亚](/articles/rfa/1045296.md)
+
 6-17 [《难民法》延宕15年 最长滞台难民已6年无身分](/articles/rfa/1045297.md)
 
 6-17 [余茂春：特朗普对中政策的“拨乱反正” 在美欧得到延续](/articles/rfa/1045298.md)
@@ -598,6 +600,4 @@
 5-14 [《国安法》下的“新香港”  调查显示六成人认为学术自由受限](/articles/rfa/1045594.md)
 
 5-14 [白宫官员：美台交往基于非官方关系 确保符合美台利益](/articles/rfa/1045595.md)
-
-5-14 [伊斯兰教会长说新疆信仰很自由  五岁的恐怖分子？](/articles/rfa/1045596.md)
 
