--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-18 [俄罗斯官员预计美俄数周内展开武器控制对话](/articles/rfi/1027841.md)
+
 6-18 [联合国气候谈判无果而终  英国紧急召开四十国部长会议](/articles/rfi/1027842.md)
 
 6-18 [法国今结束强制戴口罩 反对党讽乃选举逼近策略](/articles/rfi/1027843.md)
@@ -598,6 +600,4 @@
 6-12 [G7峰会第二天：聚焦冠状病毒大流行的教训和外交挑战](/articles/rfi/1028139.md)
 
 6-12 [日本诺贝尔化学奖得主根岸英一过世 终年85岁 – 法国国际广播电台 - RFI](/articles/rfi/1028140.md)
-
-6-12 [林书豪推特宣布 将重返CBA北京首钢 – 法国国际广播电台 - RFI](/articles/rfi/1028141.md)
 
