--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-18 [美国众议院投票决定结束授权总统在伊拉克使用武力的法律](/articles/voa/1040063.md)
+
+6-18 [批评中国人权四十年 史密斯议员：“我更加坚定了”](/articles/voa/1040064.md)
+
+6-18 [抗衡“一带一路”？专家提醒拜登“重建更好世界”别跟中国比赛花钱](/articles/voa/1040065.md)
+
+6-18 [中国欲弯道超车控制全球区块链网络](/articles/voa/1040066.md)
+
+6-18 [时事大家谈: 美欧对抗一带一路，阻击威权整装待发？](/articles/voa/1040067.md)
+
 6-18 [中国制裁在联邦议会提出“警告新疆种族灭绝”议案的比利时议员](/articles/voa/1040068.md)
 
 6-18 [不想依赖北京 普京更愿意在大国间周旋，日内瓦峰会让俄满意](/articles/voa/1040069.md)
@@ -590,14 +600,4 @@
 6-4 [又到六四周年 学运领袖吁把天安门事件摆上台面、撬动北京](/articles/voa/1040361.md)
 
 6-4 [拜登签署行政令 禁止投资损害美国及盟友安全或民主价值观的中国公司](/articles/voa/1040362.md)
-
-6-4 [拜登将访问欧洲以修复同盟关系](/articles/voa/1040363.md)
-
-6-4 [香港行为艺术家与童装店合作 六四晚派特制“烛光有罪”蜡烛悼死难者](/articles/voa/1040364.md)
-
-6-4 [时事大家谈: 西方学者：六·四如何改变中国的现在和未来？](/articles/voa/1040365.md)
-
-6-4 [亲历者回忆六四: 民主和自由与青春和觉醒同步(下)](/articles/voa/1040366.md)
-
-6-4 [澳大利亚经济和出口双暴增，中国制裁事与愿违](/articles/voa/1040367.md)
 
