--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-18 [为中共“政治合法性”背书？复旦学者葛剑雄言论惹争议](/articles/rfa/1045295.md)
+
 6-18 [中国经济威胁  英法表态支持澳大利亚](/articles/rfa/1045296.md)
 
 6-17 [《难民法》延宕15年 最长滞台难民已6年无身分](/articles/rfa/1045297.md)
@@ -598,6 +600,4 @@
 5-14 [日本2021防卫白皮书首提台海稳定](/articles/rfa/1045593.md)
 
 5-14 [《国安法》下的“新香港”  调查显示六成人认为学术自由受限](/articles/rfa/1045594.md)
-
-5-14 [白宫官员：美台交往基于非官方关系 确保符合美台利益](/articles/rfa/1045595.md)
 
