--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-18 [拜普会后 一尊向港人发脾气？ - 要闻分析](/articles/rfi/1027833.md)
+
+6-18 [【视频】联合国世界遗产古迹景点阿尔比主教城](/articles/rfi/1027834.md)
+
 6-18 [英美指控  中国压制香港不同意见](/articles/rfi/1027835.md)
 
 6-18 [港警大动作搜查《苹果日报》总部激起各方抨击](/articles/rfi/1027836.md)
@@ -596,8 +600,4 @@
 6-12 [G7峰会 韩国 澳洲 南非 印度参加](/articles/rfi/1028131.md)
 
 6-12 [阿根廷紧急批准中国康希诺生物新冠疫苗使用许可](/articles/rfi/1028132.md)
-
-6-12 [G7峰会：新全球基础设施倡议VS中国一带一路 - 要闻解说](/articles/rfi/1028133.md)
-
-6-12 [埃塞俄比亚饱受争议的世纪工程复兴大坝 - 聚焦非洲](/articles/rfi/1028134.md)
 
