--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [涉中国“千人计划”的美宇航局资深科学家被判监禁](/articles/voa/1040056.md)
+
+6-18 [美国最高法院再次维持《平价医保法案》](/articles/voa/1040057.md)
+
 6-18 [核武库将翻一番 中国急速核扩军意图何在？](/articles/voa/1040058.md)
 
 6-18 [参联会主席：中国不太可能近期武装夺取台湾](/articles/voa/1040059.md)
@@ -596,8 +600,4 @@
 6-4 [中国科技外交官：中国获取外国技术的中间人](/articles/voa/1040354.md)
 
 6-4 [六四屠杀32年后，他们在Clubhouse找到重回天安门的感觉](/articles/voa/1040355.md)
-
-6-4 [艾未未在葡萄牙开新展](/articles/voa/1040356.md)
-
-6-4 [拜登称反腐是一个核心的国家安全利益](/articles/voa/1040357.md)
 
