--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,14 @@
 金融时报
 ------
 
+6-18 [从巴黎到上海的小酒馆文化，酝酿了30年](/articles/ft/1045460.md)
+
+6-18 [声讨衡水模式背后的阶层话语权碾压](/articles/ft/1045461.md)
+
+6-18 [在“自传体餐厅”品尝伦敦名厨的记忆美食](/articles/ft/1045462.md)
+
+6-18 [沈伟：想挣钱，就别做艺术](/articles/ft/1045463.md)
+
 6-17 [金正恩的健康隐患和他采取的防范措施](/articles/ft/1045464.md)
 
 6-17 [黑石同意以30亿美元收购SOHO中国](/articles/ft/1045465.md)
@@ -592,12 +600,4 @@
 4-14 [拜登将宣布从阿富汗撤出全部美军](/articles/ft/1045758.md)
 
 4-14 [美元是问题还是答案？](/articles/ft/1045759.md)
-
-4-13 [日本决定将福岛核污水排进太平洋](/articles/ft/1045760.md)
-
-4-13 [明尼阿波里斯再现警察对黑人开枪](/articles/ft/1045761.md)
-
-4-13 [制裁中国超算实体：中美“军民两用技术”的脱钩或将不可避免](/articles/ft/1045762.md)
-
-4-13 [美国疾控中心敦促密歇根州封锁以抑制新冠疫情](/articles/ft/1045763.md)
 
