--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-18 [简报：神舟十二号航天员进入“天和”核心舱；潘石屹夫妇出售SOHO中国](/articles/nyt/1046714.md)
+
+6-18 [在中国做生意意味着什么？他预言了苹果的困境](/articles/nyt/1046715.md)
+
 6-17 [请以我的名字呼唤我](/articles/nyt/1046716.md)
 
 6-17 [地缘政治竞争延伸至太空：中俄联手对抗美国](/articles/nyt/1046717.md)
@@ -596,8 +600,4 @@
 4-1 [苏伊士运河堵塞事件与全球化的未来](/articles/nyt/1047012.md)
 
 4-1 [印度16岁少女称遭强奸，家人将她与嫌犯捆绑游街](/articles/nyt/1047013.md)
-
-4-1 [曼哈顿袭击亚裔事件嫌犯被捕，曾于20年前弑母](/articles/nyt/1047014.md)
-
-4-1 [黎智英、李柱铭等七人被判非法集结罪](/articles/nyt/1047015.md)
 
