--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-18 [分析：美联储之“鹰”唤醒沉睡的美元 “熊”受惊吓或将带动更大涨势](/articles/reuters/1036737.md)
+
+6-18 [独家：太平洋海底电缆项目搁浅 美国警告有中国公司参与构成安全威胁](/articles/reuters/1036738.md)
+
+6-18 [亚股微涨但周线下跌 美联储鹰派立场支撑美元](/articles/reuters/1036739.md)
+
 6-18 [预计未来五年中国新能源汽车销量年均增速40%以上--中汽协](/articles/reuters/1036740.md)
 
 6-18 [美国安全机构对2016年来涉及10人死亡的30起特斯拉车祸展开调查](/articles/reuters/1036741.md)
@@ -594,10 +600,4 @@
 6-10 [阿里巴巴计划与物流子公司菜鸟开发自动驾驶卡车](/articles/reuters/1037035.md)
 
 6-10 [中国将通过沪深港通等扩大QDII规模 有序推动少数不可兑换项目开放--央行副行长](/articles/reuters/1037036.md)
-
-6-10 [特斯拉将交付高端车型Model S Plaid 在豪华车市场抗衡奔驰和保时捷](/articles/reuters/1037037.md)
-
-6-10 [中国证监会主席详解热点：IPO发行没收紧没放松 对企业选择上市地持开放态度](/articles/reuters/1037038.md)
-
-6-10 [人民币汇率的影响因素复杂 双向波动将成常态--央行副行长潘功胜](/articles/reuters/1037039.md)
 
