--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-18 [美国凤凰城郊区枪手驾车随机扫射 酿1死12伤 – 法国国际广播电台 - RFI](/articles/rfi/1027825.md)
+
+6-18 [美国宣布挹注32亿美元 加速研发COVID-19药物 – 法国国际广播电台 - RFI](/articles/rfi/1027826.md)
+
 6-18 [金正恩提出用对话和对决两手准备来面对拜登政府](/articles/rfi/1027827.md)
 
 6-18 [苹果日报遭突袭搜索 美国吁香港停止打压媒体 – 法国国际广播电台 - RFI](/articles/rfi/1027828.md)
@@ -596,8 +600,4 @@
 6-13 [G7寻求团结一致共同应对中国挑战及疫情大流行 默克尔：&quot;不能坐视中国包揽一切&quot;](/articles/rfi/1028123.md)
 
 6-13 [冯德莱恩：欧盟目标是年底前出口7亿剂疫苗](/articles/rfi/1028124.md)
-
-6-13 [法国接种首剂疫苗人数突破象征性的3000万大关](/articles/rfi/1028125.md)
-
-6-13 [防潜艇被监控 澳洲终止与中国合作研究海温计划](/articles/rfi/1028126.md)
 
