--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-18 [维舟 | 王思聪的翻车](/articles/cdt/381322.md)
+
 6-18 [立场新闻 | 当报馆成犯罪现场，《苹果》记者在经历什么？](/articles/cdt/381324.md)
 
 6-18 [【404档案馆】CDT播客第5期：血案频发与禁搜“献忠学”](/articles/cdt/381330.md)
@@ -598,6 +600,4 @@
 5-12 [端传媒｜成都49中门口，那些手举菊花、高喊“真相”的人们](/articles/cdt/382644.md)
 
 5-12 [维舟｜孩子坠亡之后](/articles/cdt/382650.md)
-
-5-12 [【CDT推荐】本周推荐媒体](/articles/cdt/382651.md)
 
