--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-18 [端传媒 | 何为“正常新闻”：香港《苹果》被二度搜查，谁来定义言论自由？（节选）](/articles/cdt/381318.md)
+
 6-18 [维舟 | 王思聪的翻车](/articles/cdt/381322.md)
 
 6-18 [立场新闻 | 当报馆成犯罪现场，《苹果》记者在经历什么？](/articles/cdt/381324.md)
@@ -598,6 +600,4 @@
 5-12 [数据归集处｜人口数据再剖析](/articles/cdt/382639.md)
 
 5-12 [端传媒｜成都49中门口，那些手举菊花、高喊“真相”的人们](/articles/cdt/382644.md)
-
-5-12 [维舟｜孩子坠亡之后](/articles/cdt/382650.md)
 
