--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-18 [抗体筛查可改变新冠疫苗分配](/articles/ft/1045455.md)
+
 6-18 [约翰逊不执行《北爱议定书》，为何拜登不公开指责？](/articles/ft/1045456.md)
 
 6-18 [数据分析：“反仇视亚裔运动”在美国究竟有多大影响？](/articles/ft/1045457.md)
@@ -598,6 +600,4 @@
 4-15 [被遗忘的日本：投资日本的机遇和挑战](/articles/ft/1045753.md)
 
 4-15 [华丽转身的欧洲股市，能否持续领先？](/articles/ft/1045754.md)
-
-4-15 [阿里被处罚之后，高科技公司反垄断的下一步是什么？](/articles/ft/1045755.md)
 
