--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-18 [焦点：芯片荒、“双碳”目标何时清晰正让中国汽车厂商忧心忡忡](/articles/reuters/1036730.md)
+
 6-18 [中国重要财经新闻一周回顾](/articles/reuters/1036731.md)
 
 6-18 [美国财长叶伦促G20成员国支持全球最低公司税率](/articles/reuters/1036732.md)
@@ -598,6 +600,4 @@
 6-10 [中国长江三峡集团计划涉足西班牙电力零售市场--五日报](/articles/reuters/1037028.md)
 
 6-10 [美国参院通过创新竞争法案对抗中国 中国商务部：反对将经贸问题政治化](/articles/reuters/1037029.md)
-
-6-10 [中国股市全线收涨 因通胀担忧消退](/articles/reuters/1037030.md)
 
