--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-18 [湖北十堰居民区燃气管道爆炸事故 8人被刑拘](/articles/rfi/1027811.md)
+
+6-18 [习近平发声后 中国湖北刑拘8人为气爆酿25死负责 – 法国国际广播电台 - RFI](/articles/rfi/1027812.md)
+
+6-18 [日本前法务大臣河井克行买票 一审遭判3年有期徒刑 – 法国国际广播电台 - RFI](/articles/rfi/1027813.md)
+
+6-18 [日本札幌市熊出没 酿4伤学校停课机场停飞 – 法国国际广播电台 - RFI](/articles/rfi/1027814.md)
+
+6-18 [美众院两党合作  通过废除对伊拉克用兵授权法 – 法国国际广播电台 - RFI](/articles/rfi/1027815.md)
+
 6-18 [香港竞争力全球排名跌至第7位 瑞士跃升首位](/articles/rfi/1027816.md)
 
 6-18 [香港式抗争：《苹果》受压后如常出版 购买者众 记者团体续评批港府](/articles/rfi/1027817.md)
@@ -590,14 +600,4 @@
 6-13 [剑指支联会 骆惠宁指叫嚣“结束一党专政”是香港大敌 中联办一度删走字句惹猜疑](/articles/rfi/1028109.md)
 
 6-13 [湖北十堰住宅区煤气管道爆炸 已知12人死上百人伤](/articles/rfi/1028110.md)
-
-6-13 [巴西总统出席集会不配合防疫 挨罚2800元 – 法国国际广播电台 - RFI](/articles/rfi/1028111.md)
-
-6-13 [夏天还没到 美西88%地区已处干旱状态 – 法国国际广播电台 - RFI](/articles/rfi/1028112.md)
-
-6-13 [象牙海岸圣战攻击 3名军警遭炸死 – 法国国际广播电台 - RFI](/articles/rfi/1028113.md)
-
-6-13 [快艇132-106胜出 爵士听牌再等等 – 法国国际广播电台 - RFI](/articles/rfi/1028114.md)
-
-6-13 [乘客扬言让飞机「掉下来」 达美飞亚特兰大班机急转降 – 法国国际广播电台 - RFI](/articles/rfi/1028115.md)
 
