--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-18 [当美国的种族主义成为其他独裁者的挡箭牌](/articles/nyt/1046711.md)
+
 6-18 [潘石屹夫妇抛售中国资产，黑石集团接盘SOHO中国](/articles/nyt/1046712.md)
 
 6-18 [聚焦神舟十二号：三名中国宇航员进入天宫号空间站核心舱](/articles/nyt/1046713.md)
@@ -598,6 +600,4 @@
 4-2 [使用生长激素帮孩子长高？你应该更慎重](/articles/nyt/1047009.md)
 
 4-2 [BBC驻华记者沙磊因安全隐忧离开中国](/articles/nyt/1047010.md)
-
-4-2 [简报：BBC驻华记者因安全隐忧离京；香港继续镇压民主派](/articles/nyt/1047011.md)
 
