--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-18 [疫苗捐赠日台高调互动 木已成舟未见中共强烈反应](/articles/voa/1040046.md)
+
 6-18 [中国军机不停扰台 美国会接连立法挺台、呼吁合作生产疫苗](/articles/voa/1040047.md)
 
 6-18 [下载超越亚马逊 盗版官司缠身 中国网购平台SHEIN在美国能撑多久？](/articles/voa/1040048.md)
@@ -598,6 +600,4 @@
 6-4 [拜登下月首访欧洲，美俄峰会举世关注](/articles/voa/1040344.md)
 
 6-4 [美国国会及行政当局中国委员会主席发表声明纪念六四事件32周年](/articles/voa/1040345.md)
-
-6-4 [场地被封活动人士被捕 长燃30多年的维园六四烛光难再续](/articles/voa/1040346.md)
 
