--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-18 [为什么越来越多美国女性选择晚生孩子？](/articles/nyt/1046710.md)
+
 6-18 [当美国的种族主义成为其他独裁者的挡箭牌](/articles/nyt/1046711.md)
 
 6-18 [潘石屹夫妇抛售中国资产，黑石集团接盘SOHO中国](/articles/nyt/1046712.md)
@@ -598,6 +600,4 @@
 4-2 [台铁列车在隧道内出轨，至少一人死亡](/articles/nyt/1047008.md)
 
 4-2 [使用生长激素帮孩子长高？你应该更慎重](/articles/nyt/1047009.md)
-
-4-2 [BBC驻华记者沙磊因安全隐忧离开中国](/articles/nyt/1047010.md)
 
