--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-18 [周五《苹果日报》增印5倍 港人排队购报以示支持](/articles/voa/1040045.md)
+
 6-18 [疫苗捐赠日台高调互动 木已成舟未见中共强烈反应](/articles/voa/1040046.md)
 
 6-18 [中国军机不停扰台 美国会接连立法挺台、呼吁合作生产疫苗](/articles/voa/1040047.md)
@@ -598,6 +600,4 @@
 6-5 [记者手记：莫哈韦沙漠里的六四守夜人](/articles/voa/1040343.md)
 
 6-4 [拜登下月首访欧洲，美俄峰会举世关注](/articles/voa/1040344.md)
-
-6-4 [美国国会及行政当局中国委员会主席发表声明纪念六四事件32周年](/articles/voa/1040345.md)
 
