--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-18 [半数德国人已接种首剂疫苗 Delta病毒株添忧 – 法国国际广播电台 - RFI](/articles/rfi/1027798.md)
+
 6-18 [伊朗总统选举：选情低迷 极端保守派莱西胜选几无悬念 - 要闻解说](/articles/rfi/1027799.md)
 
 6-18 [港媒：警方起诉苹果日报张剑虹、罗伟光 – 法国国际广播电台 - RFI](/articles/rfi/1027800.md)
@@ -598,6 +600,4 @@
 6-13 [莫里森：已准备好与中国坐在谈判桌前 美英是澳洲最亲密朋友](/articles/rfi/1028096.md)
 
 6-13 [欧盟官员吁  避免为60岁以上者接种AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1028097.md)
-
-6-13 [G7公报谴责中国侵犯新疆、香港人权 – 法国国际广播电台 - RFI](/articles/rfi/1028098.md)
 
