--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-18 [台大教授赴“祖国”施打疫苗 成对岸统战样板](/articles/rfa/1045285.md)
+
 6-18 [前美国驻UN大使黑利警告：北京若夺下台湾就完了](/articles/rfa/1045286.md)
 
 6-18 [港警抓人搜报馆冻资产后   《苹果日报》翌日如常出版市民爆买](/articles/rfa/1045287.md)
@@ -598,6 +600,4 @@
 5-17 [台湾三天确诊达719例 台北万华阳性率10%如纽约初期](/articles/rfa/1045583.md)
 
 5-17 [毛左文革55周年座谈会取消   北京利用文革正反两派巩固权力](/articles/rfa/1045584.md)
-
-5-16 [重庆保利香雪小区爆发大规模抗暴事件  业主赶走数百名黑衣人](/articles/rfa/1045585.md)
 
