--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-19 [英确诊激增 义大利恢复英入境旅客隔离5天 – 法国国际广播电台 - RFI](/articles/rfi/1027784.md)
+
 6-18 [港警引国安法起诉张剑虹、罗伟光  联合国人权高专办发声](/articles/rfi/1027785.md)
 
 6-18 [美国警告中企参与构成安全威胁 太平洋海底电缆项目搁浅](/articles/rfi/1027786.md)
@@ -598,6 +600,4 @@
 6-14 [Covid-19 : 巴西总统游行不戴口罩被罚](/articles/rfi/1028082.md)
 
 6-14 [乔科维奇后来居上力克西西帕斯 法网夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1028083.md)
-
-6-14 [流亡藏人新政府上任 与北京对话希望依然渺茫 - 公民论坛](/articles/rfi/1028084.md)
 
