--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-19 [香港国安法扼杀媒体自由   国际呼吁释放苹果日报高管](/articles/rfa/1045283.md)
+
 6-19 [加拿大推动《加台关系架构法》 国会一读通过](/articles/rfa/1045284.md)
 
 6-18 [台大教授赴“祖国”施打疫苗 成对岸统战样板](/articles/rfa/1045285.md)
@@ -598,6 +600,4 @@
 5-17 [中国4天29例本土病例找不到源头   恐新一波疫情又爆发](/articles/rfa/1045581.md)
 
 5-17 [秋后算帐式审讯   香港支联会大部分骨干成员将入狱](/articles/rfa/1045582.md)
-
-5-17 [台湾三天确诊达719例 台北万华阳性率10%如纽约初期](/articles/rfa/1045583.md)
 
