--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [流亡藏人领袖希望恢复与中国对话](/articles/voa/1040038.md)
+
 6-19 [壹传媒和苹果日报两高管遭起诉 香港新闻自由岌岌可危](/articles/voa/1040039.md)
 
 6-19 [蔡英文会唔二台企大佬 就采购BNT疫苗达共识](/articles/voa/1040040.md)
@@ -598,6 +600,4 @@
 6-5 [众议院议长佩洛西就六四屠杀32周年发表声明(全文翻译)](/articles/voa/1040336.md)
 
 6-5 [焦点对话: 六四32周年“世代对话” 周锋锁vs.洞物员](/articles/voa/1040337.md)
-
-6-5 [布林肯国务卿就六四屠杀32周年发表声明（全文翻译）](/articles/voa/1040338.md)
 
