--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [欧洲助黑山削减中国债务，谈判已进入最后阶段](/articles/voa/1040037.md)
+
 6-19 [流亡藏人领袖希望恢复与中国对话](/articles/voa/1040038.md)
 
 6-19 [壹传媒和苹果日报两高管遭起诉 香港新闻自由岌岌可危](/articles/voa/1040039.md)
@@ -598,6 +600,4 @@
 6-5 [美国5月份新增55.9万个就业岗位](/articles/voa/1040335.md)
 
 6-5 [众议院议长佩洛西就六四屠杀32周年发表声明(全文翻译)](/articles/voa/1040336.md)
-
-6-5 [焦点对话: 六四32周年“世代对话” 周锋锁vs.洞物员](/articles/voa/1040337.md)
 
