--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-19 [中共国安高层现身破叛逃传闻  美专家质疑](/articles/rfa/1045278.md)
+
 6-19 [中国驻法大使以战狼为傲   与习近平指示背道而驰？](/articles/rfa/1045279.md)
 
 6-19 [拜登行政令将督促中方软件加强个人信息保护](/articles/rfa/1045280.md)
@@ -598,6 +600,4 @@
 5-18 [曾经带头拥抱中国的加拿大   如今吹起支持台湾风](/articles/rfa/1045576.md)
 
 5-18 [中国斡旋以巴冲突 学者: 俄罗斯介入叙利亚问题的翻版](/articles/rfa/1045577.md)
-
-5-17 [台湾《苹果日报》纸版谢幕](/articles/rfa/1045578.md)
 
