--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+6-19 [评估联准会货币政策展望 道琼指数连5黑 – 法国国际广播电台 - RFI](/articles/rfi/1027773.md)
+
+6-19 [市场评估美国升息展望 欧股挫跌 – 法国国际广播电台 - RFI](/articles/rfi/1027774.md)
+
+6-19 [世卫组织：非洲疫情轨迹陡升 令人忧心 – 法国国际广播电台 - RFI](/articles/rfi/1027775.md)
+
+6-19 [香港和澳门纷纷“暂停”驻台办事处，印证了北京和台湾的关系在恶化 - 法国世界报](/articles/rfi/1027776.md)
+
+6-19 [法国外长：应对中国三管齐下](/articles/rfi/1027777.md)
+
+6-19 [苹果日报 一时洛阳纸贵 - 要闻分析](/articles/rfi/1027778.md)
+
 6-19 [世卫警告：非洲新冠病例激增 Delta将成为全球主要变种病毒](/articles/rfi/1027779.md)
 
 6-19 [德尔塔变异毒株：默克尔和马克龙共同呼吁欧洲杯赛事的组织要警惕这一毒株](/articles/rfi/1027780.md)
@@ -588,16 +600,4 @@
 6-14 [AZ疫苗险益评估有利于各年龄层 – 法国国际广播电台 - RFI](/articles/rfi/1028071.md)
 
 6-14 [拜登联合战略初见效 误判东升西降习近平孤立](/articles/rfi/1028072.md)
-
-6-14 [七国集团剑指中国首提台海  要求彻查新冠起源](/articles/rfi/1028073.md)
-
-6-14 [内塔尼亚胡被请下台了 - 要闻分析](/articles/rfi/1028074.md)
-
-6-14 [秘鲁2021总统选举 藤森怒斥舞弊行为](/articles/rfi/1028075.md)
-
-6-14 [拜登祝贺贝内特就任以色列总理 默克尔表示将与以色列新政府密切合作](/articles/rfi/1028076.md)
-
-6-14 [拜登抵达布鲁塞尔 斯托尔滕贝格：北约须加强采取共同政策应对中国](/articles/rfi/1028077.md)
-
-6-14 [拜登对G7联合声明表示满意 马克龙指G7并非与中国为敌的俱乐部](/articles/rfi/1028078.md)
 
