--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-19 [拜登宣布美国已接种三亿剂新冠疫苗](/articles/voa/1040035.md)
+
+6-19 [路透社：在美国警告下，华为参与竞标的太平洋海底电缆项目搁浅](/articles/voa/1040036.md)
+
 6-19 [欧洲助黑山削减中国债务，谈判已进入最后阶段](/articles/voa/1040037.md)
 
 6-19 [流亡藏人领袖希望恢复与中国对话](/articles/voa/1040038.md)
@@ -596,8 +600,4 @@
 6-5 [拜登与普京峰会 专家分析：习近平还要被晾一段时间](/articles/voa/1040333.md)
 
 6-5 [六四事件周年之际 微软必应图像搜索找不到“坦克人”](/articles/voa/1040334.md)
-
-6-5 [美国5月份新增55.9万个就业岗位](/articles/voa/1040335.md)
-
-6-5 [众议院议长佩洛西就六四屠杀32周年发表声明(全文翻译)](/articles/voa/1040336.md)
 
