--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-19 [国安法对媒体激进应用——纽约时报报道港府搜查苹果日报逮捕报人](/articles/rfi/1027768.md)
+
+6-19 [美团执行长王兴遭约谈 皆因习近平疑心重？](/articles/rfi/1027769.md)
+
+6-19 [亚美尼亚 :纳卡失利后提前立法选举](/articles/rfi/1027770.md)
+
+6-19 [疫苗即将过期 巴勒斯坦取消以色列捐赠疫苗协议 – 法国国际广播电台 - RFI](/articles/rfi/1027771.md)
+
+6-19 [秘鲁矿工巴士坠山谷 27死12人伤 – 法国国际广播电台 - RFI](/articles/rfi/1027772.md)
+
 6-19 [评估联准会货币政策展望 道琼指数连5黑 – 法国国际广播电台 - RFI](/articles/rfi/1027773.md)
 
 6-19 [市场评估美国升息展望 欧股挫跌 – 法国国际广播电台 - RFI](/articles/rfi/1027774.md)
@@ -590,14 +600,4 @@
 6-14 [NBA篮网厄文脚伤退场 公鹿拿下季后赛次轮第4战 – 法国国际广播电台 - RFI](/articles/rfi/1028066.md)
 
 6-14 [公鹿抓破篮网 季后赛次轮扳成2平 – 法国国际广播电台 - RFI](/articles/rfi/1028067.md)
-
-6-14 [公鹿对篮网扳成平手 字母哥：全队准备再赢两场 – 法国国际广播电台 - RFI](/articles/rfi/1028068.md)
-
-6-14 [复旦这所大学 真是很魔幻？](/articles/rfi/1028069.md)
-
-6-14 [班奈特将任以色列总理  拜登道贺 – 法国国际广播电台 - RFI](/articles/rfi/1028070.md)
-
-6-14 [AZ疫苗险益评估有利于各年龄层 – 法国国际广播电台 - RFI](/articles/rfi/1028071.md)
-
-6-14 [拜登联合战略初见效 误判东升西降习近平孤立](/articles/rfi/1028072.md)
 
