--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,30 @@
 路透
 ------
 
+6-19 [独家：美国明尼亚波利斯联储总裁希望维持近零利率至少到2023年底](/articles/reuters/1036706.md)
+
+6-19 [欧洲央行料在明年3月如期结束PEPP 且不会扩大常规资产购买计划--调查](/articles/reuters/1036707.md)
+
+6-19 [独家：行业专家告诉OPEC美国今年石油产量增长有限--消息人士](/articles/reuters/1036708.md)
+
+6-19 [独家：中国购买至少八艘美国大豆船货 为四个半月来最大一笔--交易商](/articles/reuters/1036709.md)
+
+6-19 [焦点：美联储转趋“鹰派”是对通胀和增长加速的自然反应--圣路易斯联储总裁](/articles/reuters/1036710.md)
+
+6-19 [中国国常会：中央财政安排200亿元对种粮农民发放补贴 缓解农资价格上涨](/articles/reuters/1036711.md)
+
+6-19 [独家：欧盟反垄断监管机构年底前调查谷歌广告技术业务--消息](/articles/reuters/1036712.md)
+
+6-19 [高盛认为美联储转鹰引发的大宗商品下跌是“买入机会”](/articles/reuters/1036713.md)
+
+6-19 [美联储鹰派预期拖累金价小跌 周线势将创逾一年来最大跌幅](/articles/reuters/1036714.md)
+
+6-19 [国际油价上涨 因OPEC预计美国今年页岩油产量增长缓慢](/articles/reuters/1036715.md)
+
+6-19 [美国股市大幅收低 道指和标普500指数周线跌幅创数月最大](/articles/reuters/1036716.md)
+
+6-19 [美联储点燃的美元涨势延烧 势将录得14个月来最大周线涨幅](/articles/reuters/1036717.md)
+
 6-18 [中国5月铜出口量创14个月新高 并连续第三个月上升](/articles/reuters/1036718.md)
 
 6-18 [特写：美联储转鹰有啥可怕 中国央行已先动起来](/articles/reuters/1036719.md)
@@ -576,28 +600,4 @@
 6-11 [美国参议员抨击苹果、亚马逊和Nike等美国企业对中国的强迫劳动视而不见](/articles/reuters/1037004.md)
 
 6-11 [路透测算的人民币中间价料开在6.386元附近 较上日升112点](/articles/reuters/1037005.md)
-
-6-11 [中国正“非常快速和持续地”增强军事能力--美国参谋长联席会议主席米利](/articles/reuters/1037006.md)
-
-6-11 [美国公布通胀数据后美元小跌 市场关注下周美联储会议](/articles/reuters/1037007.md)
-
-6-11 [美股标普500指数创新高 长期通胀忧虑减轻](/articles/reuters/1037008.md)
-
-6-11 [油价升至两年高位 因需求预期上升](/articles/reuters/1037009.md)
-
-6-11 [金价小涨此前美国公布通胀数据](/articles/reuters/1037010.md)
-
-6-10 [中国官员检查北方港口的煤炭库存 打击囤积行为--消息人士](/articles/reuters/1037011.md)
-
-6-10 [日本首相称将寻求G7对日本举办安全奥运会的理解](/articles/reuters/1037012.md)
-
-6-10 [焦点：中国5月金融数据无惊无喜 政策稳调不改仍有保有压](/articles/reuters/1037013.md)
-
-6-10 [中国考虑7月起从国家储备中释放80万至90万吨原铝--顾问公司CRU](/articles/reuters/1037014.md)
-
-6-10 [图表新闻：中国5月末外币存贷款均创纪录新高 6-8月分红购汇或有扰动](/articles/reuters/1037015.md)
-
-6-10 [中国证监会将保持新股发行节奏与二级市场承受能力相适应--媒体援引监管人士](/articles/reuters/1037016.md)
-
-6-10 [字节跳动新推火山引擎品牌 加大对企业服务领域的扩张](/articles/reuters/1037017.md)
 
