--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [美国和中国向争议海域派遣军舰 菲律宾是否会选边站？](/articles/voa/1040030.md)
+
 6-19 [美卫生部监察部门要查NIH资助项目，能否有助新冠病毒溯源？](/articles/voa/1040031.md)
 
 6-19 [联大通过决议 呼吁停止向缅甸输送武器 中国投弃权票](/articles/voa/1040032.md)
@@ -598,6 +600,4 @@
 6-5 [特鲁多：北京主办冬奥会为在人权问题上向中国施压提供了机会](/articles/voa/1040328.md)
 
 6-5 [人民法庭伦敦开庭听证 审议中国政府践踏维吾尔人权指称](/articles/voa/1040329.md)
-
-6-5 [白宫称阻止资本流入中国涉军企业决不手软](/articles/voa/1040330.md)
 
