--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-19 [奇客资讯｜美国将禁止认证华为等中企通信设备](/articles/cdt/381305.md)
+
 6-18 [骚客文艺 | 学生会主席为什么要造谣十几位女生是“母狗”？](/articles/cdt/381310.md)
 
 6-18 [【CDTV】众新闻 | “捍卫新闻自由的最佳方法，就是出版新闻”](/articles/cdt/381314.md)
@@ -598,6 +600,4 @@
 5-13 [莫狄骁的山房 | 今日特稿：当局的咎由自取 —— 驳成都49中事件里的谬论](/articles/cdt/382607.md)
 
 5-13 [【网络民议】四川官方已定调“颜色革命”？遇事不利境外势力](/articles/cdt/382615.md)
-
-5-12 [【404文库】余姚公安｜紧急预警！我市多名女性在“学习强国”上被骗数百万](/articles/cdt/382627.md)
 
