--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-19 [《苹果日报》两高层保释被拒 8月再开庭](/articles/dw/1041861.md)
+
 6-19 [新冠变异毒株Delta 到底有多危险？](/articles/dw/1041862.md)
 
 6-18 [熊出没！札幌4人遭袭受伤](/articles/dw/1041863.md)
@@ -598,6 +600,4 @@
 6-1 [德国联邦议员：不要相信任何情报机构](/articles/dw/1042159.md)
 
 6-1 [德语媒体：如果在卧室里消极抵抗“三孩政策”……](/articles/dw/1042160.md)
-
-6-1 [马来西亚抗议: 中国军机进行“可疑”活动](/articles/dw/1042161.md)
 
