--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 6-19 [Alfred | 港人流亡日记：时空凝滞](/articles/cdt/381295.md)
 
+6-19 [【网络民议】三胎宣传广告舆论翻车，网民称“支持男人自己生三胎”](/articles/cdt/381297.md)
+
 6-19 [星球商业评论｜连犯罪分子都开始内卷了](/articles/cdt/381298.md)
 
 6-19 [尖椒部落 | 王思聪事件：舔狗本质是性骚扰文化](/articles/cdt/381300.md)
@@ -598,6 +600,4 @@
 5-13 [纽太普同学｜去现场找“境外势力”的人 自己成了境外势力](/articles/cdt/382586.md)
 
 5-13 [【CDTV】习近平考察遇“群演”？问：搞摄影的怎么不带相机呀？](/articles/cdt/382589.md)
-
-5-13 [懂事会大王｜很遗憾，成都49中事件，媒体捅不出真相](/articles/cdt/382591.md)
 
