--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-19 [葡萄酒销量暴跌 澳大利亚决定将中国告上WTO](/articles/dw/1041857.md)
+
+6-19 [伊朗大选：强硬派莱西将成为新总统](/articles/dw/1041858.md)
+
 6-19 [港大研究：辉瑞抗体反应高于科兴](/articles/dw/1041859.md)
 
 6-19 [联合国忧虑缅甸爆发内战 民众为昂山素季“庆生“](/articles/dw/1041860.md)
@@ -596,8 +600,4 @@
 6-2 [世卫核准中国科兴疫苗作紧急使用](/articles/dw/1042155.md)
 
 6-2 [强迫劳动同谋? NBA球星代言中国品牌惹议](/articles/dw/1042156.md)
-
-6-2 [德国殖民历史：被淡忘的黑暗篇章](/articles/dw/1042157.md)
-
-6-1 [无条件基本收入：无须工作 月入千二](/articles/dw/1042158.md)
 
