--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-19 [中国汽车来了 德国人会买吗？](/articles/dw/1041855.md)
+
 6-19 [德法领导人：俄罗斯是一大挑战](/articles/dw/1041856.md)
 
 6-19 [葡萄酒销量暴跌 澳大利亚决定将中国告上WTO](/articles/dw/1041857.md)
@@ -598,6 +600,4 @@
 6-2 [在白俄罗斯遭拘押德国之声通讯员获释](/articles/dw/1042153.md)
 
 6-2 [官方突袭调查 香港六四纪念馆暂关闭](/articles/dw/1042154.md)
-
-6-2 [世卫核准中国科兴疫苗作紧急使用](/articles/dw/1042155.md)
 
