--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-19 [宋石男 | 我为复旦中文系主任改作文](/articles/cdt/381291.md)
+
 6-19 [Alfred | 港人流亡日记：时空凝滞](/articles/cdt/381295.md)
 
 6-19 [【网络民议】三胎宣传广告舆论翻车，网民称“支持男人自己生三胎”](/articles/cdt/381297.md)
@@ -598,6 +600,4 @@
 5-15 [【中国哭墙】It’s like 1984 all over again（5月10-15日，2021年）](/articles/cdt/382577.md)
 
 5-13 [纽太普同学｜去现场找“境外势力”的人 自己成了境外势力](/articles/cdt/382586.md)
-
-5-13 [【CDTV】习近平考察遇“群演”？问：搞摄影的怎么不带相机呀？](/articles/cdt/382589.md)
 
