--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-19 [促美国庆日实现疫苗接种率70%目标 拜登呼吁美国人快打疫苗](/articles/rfi/1027747.md)
+
 6-19 [美天主教团体将拟声明 拜登挺堕胎恐不得领圣体 – 法国国际广播电台 - RFI](/articles/rfi/1027748.md)
 
 6-19 [澳大利亚就中国对澳葡萄酒征收反倾销关税正式向世贸提起诉讼](/articles/rfi/1027749.md)
@@ -598,6 +600,4 @@
 6-14 [美国资深演员奈德比提辞世 享寿83岁 – 法国国际广播电台 - RFI](/articles/rfi/1028045.md)
 
 6-14 [蒲会外界期望不大 专家：有峰会已是蒲亭胜利 – 法国国际广播电台 - RFI](/articles/rfi/1028046.md)
-
-6-14 [G7公报关切台海和平稳定台湾外交部表达欢迎及感谢](/articles/rfi/1028047.md)
 
