--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-19 [伊朗强硬派司法总监莱希赢得总统选举](/articles/voa/1040026.md)
+
+6-19 [最高法就哈佛案征询政府意见 媒体人称打压亚裔破坏“精英社会”](/articles/voa/1040027.md)
+
 6-19 [澳大利亚就中国征收高额葡萄酒关税向世贸组织投诉](/articles/voa/1040028.md)
 
 6-19 [《苹果日报》两名高管被拒绝保释](/articles/voa/1040029.md)
@@ -596,8 +600,4 @@
 6-5 [美两党三位参议员即将访台 与台高层讨论美台关系](/articles/voa/1040324.md)
 
 6-5 [德国官员斥责匈牙利阻挠欧盟批评中国](/articles/voa/1040325.md)
-
-6-5 [“六四”独坐维园 韩东方：香港尚未死](/articles/voa/1040326.md)
-
-6-5 [红云压城 香港最后一份民主派报纸能否逃脱厄运？](/articles/voa/1040327.md)
 
