--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-19 [偷拍数千女生并以“美丑”排序 《校花》被撤展](/articles/dw/1041850.md)
+
+6-19 [巴勒斯坦拒绝以色列提供新冠疫苗](/articles/dw/1041851.md)
+
+6-19 [德语媒体：不是拜登的应声虫！](/articles/dw/1041852.md)
+
 6-19 [七张图看一周大事](/articles/dw/1041853.md)
 
 6-19 [深圳盐田港货船拥堵 专家忧殃及全球贸易](/articles/dw/1041854.md)
@@ -594,10 +600,4 @@
 6-2 [70年前，柏林电影节是这样诞生的](/articles/dw/1042148.md)
 
 6-2 [评论：中国人不太愿意生孩子](/articles/dw/1042149.md)
-
-6-2 [德国一周大小事](/articles/dw/1042150.md)
-
-6-2 [鼓励生、 限制生、 催着生！ 中国生育政策的变迁](/articles/dw/1042151.md)
-
-6-2 [力求不再受制于人！华为发布鸿蒙新系统](/articles/dw/1042152.md)
 
