--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-19 [东奥会：取消六个公众观看直播活动区 21日确定是否允许部分观众入场观赛](/articles/rfi/1027745.md)
+
+6-19 [奈及利亚模特儿进军国际伸展台 – 法国国际广播电台 - RFI](/articles/rfi/1027746.md)
+
 6-19 [促美国庆日实现疫苗接种率70%目标 拜登呼吁美国人快打疫苗](/articles/rfi/1027747.md)
 
 6-19 [美天主教团体将拟声明 拜登挺堕胎恐不得领圣体 – 法国国际广播电台 - RFI](/articles/rfi/1027748.md)
@@ -596,8 +600,4 @@
 6-14 [台山核电站是否发生核泄漏？美中法三国说法不一](/articles/rfi/1028043.md)
 
 6-14 [北约峰会重聚 但对中国的紧张依然存在](/articles/rfi/1028044.md)
-
-6-14 [美国资深演员奈德比提辞世 享寿83岁 – 法国国际广播电台 - RFI](/articles/rfi/1028045.md)
-
-6-14 [蒲会外界期望不大 专家：有峰会已是蒲亭胜利 – 法国国际广播电台 - RFI](/articles/rfi/1028046.md)
 
