--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [“新黄雀行动”营救香港民主抗争者接受美国会特别嘉奖](/articles/voa/1040025.md)
+
 6-19 [伊朗强硬派司法总监莱希赢得总统选举](/articles/voa/1040026.md)
 
 6-19 [最高法就哈佛案征询政府意见 媒体人称打压亚裔破坏“精英社会”](/articles/voa/1040027.md)
@@ -598,6 +600,4 @@
 6-5 [记者手记：酷热风沙中，民运人士纪念六四32周年](/articles/voa/1040323.md)
 
 6-5 [美两党三位参议员即将访台 与台高层讨论美台关系](/articles/voa/1040324.md)
-
-6-5 [德国官员斥责匈牙利阻挠欧盟批评中国](/articles/voa/1040325.md)
 
