--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-20 [黎巴嫩：民众继续饱受燃料短缺之苦](/articles/rfi/1027743.md)
+
 6-19 [Covid-19:法国对巴西大学生停发签证](/articles/rfi/1027744.md)
 
 6-19 [东奥会：取消六个公众观看直播活动区 21日确定是否允许部分观众入场观赛](/articles/rfi/1027745.md)
@@ -598,6 +600,4 @@
 6-14 [投资人关注Fed本周会议 亚洲股市多数收高 – 法国国际广播电台 - RFI](/articles/rfi/1028041.md)
 
 6-14 [北约盟友重逢，战略同盟关系尚需调整确定 - 要闻解说](/articles/rfi/1028042.md)
-
-6-14 [台山核电站是否发生核泄漏？美中法三国说法不一](/articles/rfi/1028043.md)
 
