--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [澳大利亚开始试验鼻腔喷雾式新冠疫苗](/articles/voa/1040023.md)
+
 6-20 [中国继续严打比特币挖矿活动](/articles/voa/1040024.md)
 
 6-19 [“新黄雀行动”营救香港民主抗争者接受美国会特别嘉奖](/articles/voa/1040025.md)
@@ -598,6 +600,4 @@
 6-6 [疫情继续抬头 广州市加大力度防控新冠疫情](/articles/voa/1040321.md)
 
 6-5 [台海危机加剧 打破权力平衡的关键是什么？](/articles/voa/1040322.md)
-
-6-5 [记者手记：酷热风沙中，民运人士纪念六四32周年](/articles/voa/1040323.md)
 
