--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [美国正面临三重气象威胁](/articles/voa/1040022.md)
+
 6-20 [澳大利亚开始试验鼻腔喷雾式新冠疫苗](/articles/voa/1040023.md)
 
 6-20 [中国继续严打比特币挖矿活动](/articles/voa/1040024.md)
@@ -598,6 +600,4 @@
 6-6 [中国影响力在加拿大“一目了然”？联邦加中关系特别委员会就此举行听证](/articles/voa/1040320.md)
 
 6-6 [疫情继续抬头 广州市加大力度防控新冠疫情](/articles/voa/1040321.md)
-
-6-5 [台海危机加剧 打破权力平衡的关键是什么？](/articles/voa/1040322.md)
 
