--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-20 [蕨经 | 微博被浸盐1年的告知与感谢](/articles/cdt/381282.md)
+
 6-20 [安元鼎 | 复旦数学系命案，暴露了中文系主任的语文水平](/articles/cdt/381287.md)
 
 6-19 [宋石男 | 我为复旦中文系主任改作文](/articles/cdt/381291.md)
@@ -598,6 +600,4 @@
 5-14 [BBC | 中国如何镇压维吾尔族伊玛目？](/articles/cdt/382573.md)
 
 5-14 [德国之声 | 长平观察：官媒垄断的“真相”](/articles/cdt/382575.md)
-
-5-14 [骚客文艺 | 成都公布坠亡真相后，最讨厌的是“带节奏”这种词](/articles/cdt/382576.md)
 
