--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-20 [欧足联的危险游戏：三分之一的赞助商来自中国](/articles/rfi/1027734.md)
+
+6-20 [美国政府投放32亿元资助药厂研发新药 挽救更多新冠患者生命](/articles/rfi/1027735.md)
+
 6-20 [消解北京疫苗外交 美国捐赠台湾250万剂疫苗](/articles/rfi/1027736.md)
 
 6-20 [美国对伊朗人民被剥夺&quot;自由诚实选举&quot;表示遗憾 以色列称伊朗新总统是&quot;极端人物&quot;](/articles/rfi/1027737.md)
@@ -596,8 +600,4 @@
 6-14 [意总理：将仔细评估意大利对一带一路的参与](/articles/rfi/1028032.md)
 
 6-14 [澳洲护卫舰将参加英航母打击群在印太演习](/articles/rfi/1028033.md)
-
-6-14 [特鲁多：七国领导人同意密切协调涉华议题 扣押加公民对中方不利](/articles/rfi/1028034.md)
-
-6-14 [G7公报首提台海问题 江启臣：盼落实对台湾的实质帮助](/articles/rfi/1028035.md)
 
