--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-20 [拜登夫妇饲养13年爱犬冠军  安详辞世 – 法国国际广播电台 - RFI](/articles/rfi/1027731.md)
+
 6-20 [巴西染疫不治突破50万大关  全球第2高 – 法国国际广播电台 - RFI](/articles/rfi/1027732.md)
 
 6-20 [叶门北部战略城市马里卜争夺战复炽  酿47死 – 法国国际广播电台 - RFI](/articles/rfi/1027733.md)
@@ -598,6 +600,4 @@
 6-14 [马克龙：G7不是敌对中国俱乐部 是与中国能合作尽合作的民主联合](/articles/rfi/1028029.md)
 
 6-14 [谭德赛呼吁中国配合新冠病毒溯源调查](/articles/rfi/1028030.md)
-
-6-14 [北约秘书长：联盟需要共同应对中国崛起带来的安全挑战](/articles/rfi/1028031.md)
 
