--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [中共党史掩盖和歪曲的重大历史事件(4)--抗日，到底是“中流砥柱”还是保存实力？](/articles/voa/1040018.md)
+
 6-20 [百年党庆在即 中共创造的91种精神何为真？](/articles/voa/1040019.md)
 
 6-20 [伊朗核协议缔约方星期天正式会谈](/articles/voa/1040020.md)
@@ -598,6 +600,4 @@
 6-6 [希腊对土耳其发出警告](/articles/voa/1040316.md)
 
 6-6 [七国集团就最低全球企业税率达成协议](/articles/voa/1040317.md)
-
-6-6 [香港支联会副主席邹幸彤保释外出 批评警方企图以言入罪](/articles/voa/1040318.md)
 
