--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-20 [【真理部指令】”躺平、躺平学、内卷“相关商品下架](/articles/cdt/381274.md)
+
 6-20 [蕨经 | 微博被浸盐1年的告知与感谢](/articles/cdt/381282.md)
 
 6-20 [捲氏俗女 | 我们还听得见那些微小的呐喊吗？](/articles/cdt/381285.md)
@@ -598,6 +600,4 @@
 5-14 [网易人间 | 挤进双一流A+学科里当讲师，她只是个末等公民](/articles/cdt/382563.md)
 
 5-14 [【404文库】 王培宏 | 关于对“成都49中学生坠亡事件官方通告”的几点合理质疑](/articles/cdt/382572.md)
-
-5-14 [BBC | 中国如何镇压维吾尔族伊玛目？](/articles/cdt/382573.md)
 
