--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-20 [俄拒绝打新冠疫苗的雇员将面临无薪休假](/articles/rfi/1027703.md)
+
+6-20 [法国人选新总统前的试水：极右翼主导？投票率新低？](/articles/rfi/1027704.md)
+
 6-20 [俄罗斯驻美大使启程返华府 对双边关系乐观 – 法国国际广播电台 - RFI](/articles/rfi/1027705.md)
 
 6-20 [布罗梅尔状态佳 进美奥运选拔赛男子百米准决赛 – 法国国际广播电台 - RFI](/articles/rfi/1027706.md)
@@ -596,8 +600,4 @@
 6-15 [阿联酋航空年亏损55亿美元 30多年来首见 – 法国国际广播电台 - RFI](/articles/rfi/1028001.md)
 
 6-15 [纽时：中国病毒学家石正丽否认病毒来自武汉实验室 – 法国国际广播电台 - RFI](/articles/rfi/1028002.md)
-
-6-15 [伊朗受制裁难以进口疫苗 当局紧急批准国产疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1028003.md)
-
-6-15 [港府高度关注台山核电站泄漏威胁 称向粤查问 环团促公开资料](/articles/rfi/1028004.md)
 
