--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [全球新冠病毒致死人数突破380万 Delta变异株构成更大威胁](/articles/voa/1040016.md)
+
 6-20 [台湾感谢美国大规模疫苗援助](/articles/voa/1040017.md)
 
 6-20 [中共党史掩盖和歪曲的重大历史事件(4)--抗日，到底是“中流砥柱”还是保存实力？](/articles/voa/1040018.md)
@@ -598,6 +600,4 @@
 6-6 [缅甸政府军与村民爆发冲突，打死20人](/articles/voa/1040314.md)
 
 6-6 [联合国批评丹麦通过转移难民的新法律](/articles/voa/1040315.md)
-
-6-6 [希腊对土耳其发出警告](/articles/voa/1040316.md)
 
