--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-21 [辛巴威9岁童遭鬣狗咬掉左眼鼻子 赴南非接受手术 – 法国国际广播电台 - RFI](/articles/rfi/1027697.md)
+
+6-21 [加拿大好手罗尼奇小腿受伤退赛温网 – 法国国际广播电台 - RFI](/articles/rfi/1027698.md)
+
+6-21 [伊朗极端保守派胜选后 传美军驻伊拉克基地又遇袭 – 法国国际广播电台 - RFI](/articles/rfi/1027699.md)
+
 6-20 [中国被控通过南海幽灵舰队大量购伊朗石油](/articles/rfi/1027700.md)
 
 6-20 [俄官员：劳工不接种COVID-19疫苗 恐被迫放无薪假 – 法国国际广播电台 - RFI](/articles/rfi/1027701.md)
@@ -594,10 +600,4 @@
 6-15 [场上突然倒地 欧国杯丹麦球员医院报平安 – 法国国际广播电台 - RFI](/articles/rfi/1027995.md)
 
 6-15 [NBA年度防守第1队 戈贝尔与西蒙斯满分入选 – 法国国际广播电台 - RFI](/articles/rfi/1027996.md)
-
-6-15 [与公鹿系列赛战平 篮网厄文脚扭伤第5战将缺阵 – 法国国际广播电台 - RFI](/articles/rfi/1027997.md)
-
-6-15 [黎智英获颁「杜鲁门 - 列根自由奖」盛赞黎与港人在「反修例」表现英勇](/articles/rfi/1027998.md)
-
-6-15 [中国反指北约诋毁 称对「系统性挑战」中国不会无动于中](/articles/rfi/1027999.md)
 
