--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-21 [“美元化”失败或成比特币法币化“破口”](/articles/ft/1045451.md)
+
 6-21 [默克尔之后，德国将如何应对气候变化？](/articles/ft/1045452.md)
 
 6-18 [反垄断先锋就任FTC主席：科技巨头的末日？](/articles/ft/1045453.md)
@@ -598,6 +600,4 @@
 4-16 [物理殿堂中的艺术实践](/articles/ft/1045749.md)
 
 4-15 [NFT会改变艺术吗：在数码非复制时代怎样看待加密艺术的意义和局限？](/articles/ft/1045750.md)
-
-4-15 [哲学重磅，美国人的治愈系？——海格隆德谈宗教和资本主义](/articles/ft/1045751.md)
 
