--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-21 [拜登将在美军撤离期间在白宫接待阿富汗领导人](/articles/voa/1040011.md)
+
 6-21 [坚拒“一中承诺”换工作签证，台湾“调整”驻港作业方式](/articles/voa/1040012.md)
 
 6-21 [俄罗斯大使飞返美国期待两国“平等及务实”关系](/articles/voa/1040013.md)
@@ -598,6 +600,4 @@
 6-6 [中共加紧钳制信仰自由 地方召会基督徒遭迫害](/articles/voa/1040309.md)
 
 6-6 [匈牙利人抗议计划兴建的中国大学校园](/articles/voa/1040310.md)
-
-6-6 [美国参议员承诺为台湾提供疫苗](/articles/voa/1040311.md)
 
