--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-21 [习近平像不像父亲习仲勋](/articles/rfi/1027685.md)
+
 6-21 [中国《反外国制裁法》：德国工业界表示担忧](/articles/rfi/1027686.md)
 
 6-21 [宗教改革的斗士马丁·路德第五节 路德出击之一 教会制度的源起 - 欧洲思想文化长廊](/articles/rfi/1027687.md)
@@ -598,6 +600,4 @@
 6-15 [七国集团共同抗衡中 - 柏林飞鸿](/articles/rfi/1027983.md)
 
 6-15 [法国媒体一致关注台山核电站核泄漏疑云 - 法国报纸摘要](/articles/rfi/1027984.md)
-
-6-15 [亚股涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1027985.md)
 
