--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-21 [TED演讲治不好你的抑郁症](/articles/nyt/1046708.md)
+
+6-21 [简报：美国向台湾运送250万剂疫苗；澳大利亚向世贸组织申诉中国](/articles/nyt/1046709.md)
+
 6-18 [为什么越来越多美国女性选择晚生孩子？](/articles/nyt/1046710.md)
 
 6-18 [当美国的种族主义成为其他独裁者的挡箭牌](/articles/nyt/1046711.md)
@@ -596,8 +600,4 @@
 4-2 [菲律宾外长激进回应美国亚裔遇袭事件](/articles/nyt/1047006.md)
 
 4-2 [面临舆论压力，日本还能对新疆问题保持沉默吗？](/articles/nyt/1047007.md)
-
-4-2 [台铁列车在隧道内出轨，至少一人死亡](/articles/nyt/1047008.md)
-
-4-2 [使用生长激素帮孩子长高？你应该更慎重](/articles/nyt/1047009.md)
 
