--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-21 [中国赣锋锂业将在阿根廷投资建设使用太阳能的锂生产厂](/articles/reuters/1036681.md)
+
+6-21 [美国共和党为重夺国会控制权不怕入不敷出 5月支出远超民主党](/articles/reuters/1036682.md)
+
+6-21 [亚股下跌因美联储立场改变 美债收益率下滑](/articles/reuters/1036683.md)
+
 6-21 [前澳洲副总理乔伊斯将“官复原职” 三年前因婚外情丑闻辞职--报导](/articles/reuters/1036684.md)
 
 6-21 [中国6月LPR如预期14连平 银行资金成本较稳近期仍难有上调动力](/articles/reuters/1036685.md)
@@ -594,10 +600,4 @@
 6-11 [特斯拉：将严格遵守中国数据安全法 保护消费者数据相关权益](/articles/reuters/1036979.md)
 
 6-11 [中国华为要在2025年前让乘用车实现真正无人驾驶](/articles/reuters/1036980.md)
-
-6-11 [亚股走高 美国公债收益率受通胀忧虑打压下滑](/articles/reuters/1036981.md)
-
-6-11 [美国6月原油出口预计将下滑 因需求不振和盈利不佳](/articles/reuters/1036982.md)
-
-6-11 [贝莱德称正更积极地推进私募市场投资 并称中国存在增长机会](/articles/reuters/1036983.md)
 
