--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-21 [【网络民议】不爱物业就滚出小区！警惕拜登在线打物业牌](/articles/cdt/381265.md)
+
 6-20 [【404档案馆】CDT播客第6期：教科书删改与“正确的人类集体记忆”](/articles/cdt/381267.md)
 
 6-20 [【真理部指令】“躺平、躺平学、内卷”相关商品下架](/articles/cdt/381274.md)
@@ -598,6 +600,4 @@
 5-14 [数据归集处｜三论人口之惑](/articles/cdt/382559.md)
 
 5-14 [立场新闻 | 港府引《国安法》冻结黎智英股份及三公司财产 涉逾三亿元](/articles/cdt/382561.md)
-
-5-14 [网易人间 | 挤进双一流A+学科里当讲师，她只是个末等公民](/articles/cdt/382563.md)
 
