--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-21 [NBA老鹰啄伤76人 闯进东区决赛 – 法国国际广播电台 - RFI](/articles/rfi/1027683.md)
+
 6-21 [法国地方选举 极右翼大失所望 执政党没有扎根 - 要闻分析](/articles/rfi/1027684.md)
 
 6-21 [习近平像不像父亲习仲勋](/articles/rfi/1027685.md)
@@ -598,6 +600,4 @@
 6-15 [台湾羽球一哥周天成 称有信心争夺东奥羽球金牌 – 法国国际广播电台 - RFI](/articles/rfi/1027981.md)
 
 6-15 [法国IKEA涉非法监视员工和求职者 法院判有罪 – 法国国际广播电台 - RFI](/articles/rfi/1027982.md)
-
-6-15 [七国集团共同抗衡中 - 柏林飞鸿](/articles/rfi/1027983.md)
 
