--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -37,6 +37,8 @@
 
 6-18 [骚客文艺 | 学生会主席为什么要造谣十几位女生是“母狗”？](/articles/cdt/381310.md)
 
+6-21 [【中国哭墙】李医生，父亲节快乐（6月15-6月21日，2021年）](/articles/cdt/381313.md)
+
 6-18 [【CDTV】众新闻 | “捍卫新闻自由的最佳方法，就是出版新闻”](/articles/cdt/381314.md)
 
 6-18 [NGOCN | 律师常玮平，一个不见容于国家的人](/articles/cdt/381315.md)
@@ -598,6 +600,4 @@
 5-17 [【CDT敏感词周报】第二十四期：成都49中、画师道歉、恨G党、端点星](/articles/cdt/382551.md)
 
 5-15 [知识分子｜学者研究揭秘：“一审不判离” 为何如此普遍](/articles/cdt/382557.md)
-
-5-14 [数据归集处｜三论人口之惑](/articles/cdt/382559.md)
 
