--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-21 [民阵今年不申办「7.1」游行 十八年来首次 去向9月商订](/articles/rfi/1027673.md)
+
+6-21 [阿富汗总统将会拜登 谈美国撤军与阿国暴力问题 – 法国国际广播电台 - RFI](/articles/rfi/1027674.md)
+
+6-21 [美田径女将菲丽丝出线 顺利抢下东奥门票 – 法国国际广播电台 - RFI](/articles/rfi/1027675.md)
+
+6-21 [区议员宣誓引发民主派退党潮 11人退公民党 李永达重出稳民主党军心](/articles/rfi/1027676.md)
+
 6-21 [奥运第一人 纽西兰变性举重选手将征战东奥 – 法国国际广播电台 - RFI](/articles/rfi/1027677.md)
 
 6-21 [亚美尼亚国会选举 帕辛扬提前宣布胜选 – 法国国际广播电台 - RFI](/articles/rfi/1027678.md)
@@ -592,12 +600,4 @@
 6-16 [北约峰会上领导人们如何谈论中国问题？](/articles/rfi/1027971.md)
 
 6-16 [美海军“里根”号航母打击群进入南海](/articles/rfi/1027972.md)
-
-6-16 [特鲁多：俄罗斯是对手，望北约在面对中国时保持团结](/articles/rfi/1027973.md)
-
-6-16 [传韩国总统文在寅拟在东京奥运期间赴日访问  日本政府称不是事实](/articles/rfi/1027974.md)
-
-6-16 [莫里森：在G7峰会上提到中使馆14项不满清单问题](/articles/rfi/1027975.md)
-
-6-16 [菲律宾第三次暂停终止《访问部队协议》美国防部表示欢迎](/articles/rfi/1027976.md)
 
