--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-21 [合约终止六年後才被解聘 中国学者向清华讨公道](/articles/dw/1041833.md)
+
 6-21 [近20年来首次 香港七一游行不办了](/articles/dw/1041834.md)
 
 6-21 [病毒溯源兵分两路 美拉民主阵线压中国](/articles/dw/1041835.md)
@@ -598,6 +600,4 @@
 6-3 [台湾阳性确诊旅客登机飞厦门 立荣航空称地勤疏失](/articles/dw/1042131.md)
 
 6-3 [新冠大流行 摧毁1亿个就业机会](/articles/dw/1042132.md)
-
-6-3 [UFO重大报告出炉在即 德专家: 外星人应没来过地球](/articles/dw/1042133.md)
 
