--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-21 [不明肺炎、禁言医生：被掩盖的苏联实验室炭疽泄露往事](/articles/nyt/1046705.md)
+
 6-21 [“没人征求我的同意”：她14岁，被迫嫁给强奸自己的人](/articles/nyt/1046706.md)
 
 6-21 [“思想是不怕子弹的”：在雷区中走钢丝的香港独立书店](/articles/nyt/1046707.md)
@@ -598,6 +600,4 @@
 4-6 [中国出台新规，限制外资银行在华开展业务](/articles/nyt/1047003.md)
 
 4-6 [简报：中国对外资银行设限；中国推出歌舞片维护新疆政策](/articles/nyt/1047004.md)
-
-4-2 [英美真的在遵守和维护国际法吗？](/articles/nyt/1047005.md)
 
