--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-21 [中国新冠疫苗国内接种超10亿 有效率在海外仍受质疑](/articles/voa/1040003.md)
+
 6-21 [矢板明夫：曾经以为中国最幸福](/articles/voa/1040004.md)
 
 6-21 [宋永毅：失去自由的绝望中，学《毛选》学出个“反革命”](/articles/voa/1040005.md)
@@ -598,6 +600,4 @@
 6-7 [中国官员：解散或取缔香港支联会只是时间问题](/articles/voa/1040301.md)
 
 6-7 [哈里斯副总统出访危地马拉和墨西哥](/articles/voa/1040302.md)
-
-6-7 [联合国：全球每年有42万人死于食品污染](/articles/voa/1040303.md)
 
