--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-21 [加密货币因中国打击比特币挖矿而暴跌](/articles/reuters/1036673.md)
+
+6-21 [日本首相称如果东京进入紧急状态 不排除举办无观众奥运会的可能性](/articles/reuters/1036674.md)
+
+6-21 [分析：存款利率改革减负中国LPR稳势难撼 央行官媒喊话半年末稳军心](/articles/reuters/1036675.md)
+
 6-21 [伊朗在油轮中存储更多原油 为恢复出口整装待发--消息人士](/articles/reuters/1036676.md)
 
 6-21 [中国央行正式明确优化存款利率自律 促市场有序竞争上限“有升有降”](/articles/reuters/1036677.md)
@@ -594,10 +600,4 @@
 6-11 [“非常时期，非常手段”：美国喊出终结新冠疫情策略](/articles/reuters/1036971.md)
 
 6-11 [中国央行前行长周小川：加密货币原理上有可能成为服务实体的有用工具](/articles/reuters/1036972.md)
-
-6-11 [境外机构债券交易占比升逾6% 人民币活跃程度提高--中国外汇交易中心高层](/articles/reuters/1036973.md)
-
-6-11 [焦点：G7就最低税率达成一致 但例外问题料将引发一场争论](/articles/reuters/1036974.md)
-
-6-11 [分析：美联储成功主导带风向 通胀升温未激起市场剧烈反应](/articles/reuters/1036975.md)
 
