--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-21 [中国农行称将持续打击治理虚拟货币交易 决不开展、不参与任何相关业务](/articles/reuters/1036670.md)
+
+6-21 [沃尔沃汽车将与瑞典Northvolt合作开发和生产电池](/articles/reuters/1036671.md)
+
+6-21 [中国股市收低 仍受美联储转鹰派立场影响](/articles/reuters/1036672.md)
+
 6-21 [加密货币因中国打击比特币挖矿而暴跌](/articles/reuters/1036673.md)
 
 6-21 [日本首相称如果东京进入紧急状态 不排除举办无观众奥运会的可能性](/articles/reuters/1036674.md)
@@ -594,10 +600,4 @@
 6-11 [韩国总统文在寅前往参加G7峰会 希望在气候和疫情问题上发挥更大作用](/articles/reuters/1036968.md)
 
 6-11 [香港修订电影检查员指引 如影片相当可能构成危害国家安全罪不宜上映](/articles/reuters/1036969.md)
-
-6-11 [日本考虑在奥运会前实施半紧急状态限制措施--报载](/articles/reuters/1036970.md)
-
-6-11 [“非常时期，非常手段”：美国喊出终结新冠疫情策略](/articles/reuters/1036971.md)
-
-6-11 [中国央行前行长周小川：加密货币原理上有可能成为服务实体的有用工具](/articles/reuters/1036972.md)
 
