--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-21 [客座评论：拜登主义——没有特朗普的特朗普抗中路线](/articles/dw/1041831.md)
+
+6-21 [与中共一起走完长征的德国人](/articles/dw/1041832.md)
+
 6-21 [合约终止六年後才被解聘 中国学者向清华讨公道](/articles/dw/1041833.md)
 
 6-21 [近20年来首次 香港七一游行不办了](/articles/dw/1041834.md)
@@ -596,8 +600,4 @@
 6-3 [烛光有罪？香港民众发挥创意悼六四](/articles/dw/1042129.md)
 
 6-3 [“六四”前夕 陆委会呼吁北京“还权于民”](/articles/dw/1042130.md)
-
-6-3 [台湾阳性确诊旅客登机飞厦门 立荣航空称地勤疏失](/articles/dw/1042131.md)
-
-6-3 [新冠大流行 摧毁1亿个就业机会](/articles/dw/1042132.md)
 
