--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-21 [港府冻结壹传媒户口资金   董事会周五最后决定是否停刊](/articles/rfa/1045277.md)
+
 6-19 [中共国安高层现身破叛逃传闻  美专家质疑](/articles/rfa/1045278.md)
 
 6-19 [中国驻法大使以战狼为傲   与习近平指示背道而驰？](/articles/rfa/1045279.md)
@@ -598,6 +600,4 @@
 5-18 [中国一季度离婚率大跌七成    “离婚冷静期”再引争议](/articles/rfa/1045575.md)
 
 5-18 [曾经带头拥抱中国的加拿大   如今吹起支持台湾风](/articles/rfa/1045576.md)
-
-5-18 [中国斡旋以巴冲突 学者: 俄罗斯介入叙利亚问题的翻版](/articles/rfa/1045577.md)
 
