--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-21 [奈及利亚警察开枪滥射 酿5死4伤 – 法国国际广播电台 - RFI](/articles/rfi/1027669.md)
+
+6-21 [东奥主办单位：拟开放最多1万名观众入场 – 法国国际广播电台 - RFI](/articles/rfi/1027670.md)
+
 6-21 [日股随美股颓势下跌 日经收跌逾3.2% – 法国国际广播电台 - RFI](/articles/rfi/1027671.md)
 
 6-21 [欧股开盘走跌 – 法国国际广播电台 - RFI](/articles/rfi/1027672.md)
@@ -596,8 +600,4 @@
 6-16 [解放军军机28架次今入台空域 创公布统计以来架次纪录](/articles/rfi/1027967.md)
 
 6-16 [黎智英涉违国安法案延至7月27日再审](/articles/rfi/1027968.md)
-
-6-16 [冯德莱恩：欧洲希望将进口多元化，离开中国这样的生产商](/articles/rfi/1027969.md)
-
-6-16 [曾在美从事间谍活动 新加坡学者遭遣返后再被拘](/articles/rfi/1027970.md)
 
