--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-21 [人民币跌近300点创一个半月新低 FED官员讲话料扰动外汇市场](/articles/reuters/1036669.md)
+
 6-21 [中国农行称将持续打击治理虚拟货币交易 决不开展、不参与任何相关业务](/articles/reuters/1036670.md)
 
 6-21 [沃尔沃汽车将与瑞典Northvolt合作开发和生产电池](/articles/reuters/1036671.md)
@@ -598,6 +600,4 @@
 6-11 [宝马集团在中国银行间债市公开发行35亿熊猫债 开启欧洲企业先河--NAFMII](/articles/reuters/1036967.md)
 
 6-11 [韩国总统文在寅前往参加G7峰会 希望在气候和疫情问题上发挥更大作用](/articles/reuters/1036968.md)
-
-6-11 [香港修订电影检查员指引 如影片相当可能构成危害国家安全罪不宜上映](/articles/reuters/1036969.md)
 
